# smart-attendance-backend

./: .gitignore  Cargo.toml  session_control.json
src/: lib.rs  main.rs
src/config/: cors.rs  database.rs
src/constants/: mod.rs
src/controllers/: attendance_controller.rs  class_controller.rs  mod.rs  user_controller.rs
src/docs/: workflow.md
src/handlers/: attendance_handler.rs  class_handler.rs  mod.rs  oauth_handler.rs  organization_handler.rs  user_handler.rs
src/models/: attendance_model.rs  class_model.rs  mod.rs  organization_member_model.rs  organization_model.rs  user_model.rs
src/repositories/: attendance_repository.rs  class_repository.rs  mod.rs  organization_member_repository.rs  organization_repository.rs  user_repository.rs
src/routes/: attendance_routes.rs  auth_routes.rs  class_routes.rs  mod.rs  organization_routes.rs  user_routes.rs
src/services/: attendance_service.rs  class_service.rs  mod.rs  oauth_service.rs  organization_member_service.rs  organization_service.rs  user_service.rs
src/setup/: database.rs  services.rs
src/tests/api/: test_attendance.hurl  test_class.hurl  test_user.hurl  user.hurl
src/types/: api_response.rs  claims.rs  mod.rs  permissions.rs  role.rs  status.rs  subscription.rs  user_response.rs
src/types/attendance/: attendance_type.rs  geolocation.rs  mod.rs
src/types/auth/: claims.rs
src/types/models/: mod.rs
src/types/organization/: mod.rs  organization_limit.rs
src/types/requests/: register_request.rs
src/types/user/: defaults.rs  mod.rs  (+2 more)
src/utils/: api_utils.rs  auth_utils.rs  mod.rs
(+10 files in other folders)
