[package]
name = "smart-attendance-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.5.1"
actix-ws = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = "3.0.0"
rand = "0.8.5"
bson = "2.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
shuttle-actix-web = "0.51.0"
shuttle-runtime = "0.51.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1.11.0"
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
phonenumber = "0.3.7"
anyhow = "1.0.95"
once_cell = "1.21.1"
env_logger = "0.11.7"
log = "0.4.27"
regex = "1.11.1"
email_address = "0.2.9"
argon2 = "0.5.3"
rand_core = "0.9.3"
